# persistency

./: .gitignore  CMakeLists.txt  README.md
ara/core/: core.h  error_domain.h
ara/per/: file_storage.cpp  file_storage.h  key_value_storage.cpp  key_value_storage.h  per_error_domain.cpp  per_error_domain.h  read_accessor.cpp  read_accessor.h  read_write_accessor.cpp  read_write_accessor.h  shared_handle.h  unique_handle.h
test/: CMakeLists.txt  test_per.cpp
test/p1/: test_file
